--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,29 +1,31 @@
-name: CI/CD Pipeline
+# Template below
 
-on:
-  push:
-    branches:
-      - main
-      - dev
+# name: CI/CD Pipeline
 
-jobs:
-  terraform:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+# on:
+#   push:
+#     branches:
+#       - main
+#       - dev
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 1.0.0
+# jobs:
+#   terraform:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
 
-      - name: Initialize Terraform
-        run: terraform init
+#       - name: Set up Terraform
+#         uses: hashicorp/setup-terraform@v1
+#         with:
+#           terraform_version: 1.0.0
 
-      - name: Terraform Plan
-        run: terraform plan -var-file="environments/dev/terraform.tfvars"
+#       - name: Initialize Terraform
+#         run: terraform init
 
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
-        run: terraform apply -var-file="environments/prod/terraform.tfvars" -auto-approve
+#       - name: Terraform Plan
+#         run: terraform plan -var-file="environments/dev/terraform.tfvars"
+
+#       - name: Terraform Apply
+#         if: github.ref == 'refs/heads/main'
+#         run: terraform apply -var-file="environments/prod/terraform.tfvars" -auto-approve
